[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grepper-python"
version ="0.0.1a"
dependencies = [
    "requests",
    "urllib3"
]
authors = [
    {name = "CodeGrepper", email = "support@grepper.com"},
]
description = "An API wrapper for the Grepper API."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"

[project.urls]
Repository="https://github.com/CodeGrepper/grepper-python"